- Fixed: Lingering potion protection