@@ -319,6 +319,17 @@ land:
       # Bypass permission: lands.bypass.cooldown.rename_land
       cooldown_rename_time: 1d
 
+  # Land enter title options
+  title:
+    # Should players be allowed to use PlaceholderAPI placeholders, in the land title?
+    placeholderapi:
+      # Should players be allowed to use PlaceholderAPI placeholders provided by Lands?
+      # This does not require PlaceholderAPI to be installed.
+      lands: true
+      # Should players be allowed to use PlaceholderAPI placeholders provided by 3rd party plugins and Lands?
+      # This requires PlaceholderAPI to be installed.
+      3rd-party: false
+
   # Set the minimum Euclidean distance in chunks (16 blocks). Players won't be able to claim in this buffer zone,
   # unless their role has the LAND_CLAIM_BORDER flag in the neighboring land.
   chunk-distance:
@@ -460,7 +471,6 @@ land:
     # Lands only reactivates flight, if Lands previously disabled it for the player and they're now allowed to fly again
     # at their current location. This permission just adds another requirement, besides the fly role flag.
     reactivate-perm: ''
-
 
   # /lands setowner Settings
   setowner:
